--- a/project-1-Stephen491/src/main/webapp/financialmanagerhome.css
+++ b/project-1-Stephen491/src/main/webapp/financialmanagerhome.css
@@ -24,14 +24,17 @@ body {
     top: 25%;
     
 }
-.table-hover {
-    background-color: rgb(35, 42, 53 , 0.8)!important;
+
+tbody tr{
+    cursor: pointer;
+}
+.table-hover tbody tr:hover td {
+    background-color: rgba(54, 68, 94, 0.8);
     
 }
-td {
-    background-color: rgb(35, 42, 53, 0.5)!important;
+td:hover {
+    background-color: rgba(124, 174, 255, 0.5)!important;
 }
-
 
 .navbar-brand2{
 
@@ -78,6 +81,10 @@ div::-webkit-scrollbar-thumb
 
 #resolved-reimbursements-table {
    
+}
+#feedback {
+    display: none;
+    
 }
 
 #leave-form-button {
