--- a/project-1-Stephen491/src/main/webapp/financialmanagerhome.css
+++ b/project-1-Stephen491/src/main/webapp/financialmanagerhome.css
@@ -93,3 +93,8 @@ div::-webkit-scrollbar-thumb
 #file-selector {
     margin: 1vw;
 }
+#download-receipt:hover,
+#download-receipt.hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
