--- a/project-1-Stephen491/src/main/webapp/employeehome.css
+++ b/project-1-Stephen491/src/main/webapp/employeehome.css
@@ -89,3 +89,8 @@ div::-webkit-scrollbar-thumb
 #file-selector {
     margin: 1vw;
 }
+
+.hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
